--- a/AluraPlus2D-main/style.css
+++ b/AluraPlus2D-main/style.css
@@ -16,13 +16,13 @@ body{
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
-    
 }
 .container{
     height: 100vh;
     display: grid;
+    grid-template-columns: 50% 50%;
 }
-.container-botao {
+.container-botao{
     background-color: var(--botao-azul);
     border-radius: 5px;
     padding: 1em;
