--- a/AluraPlus2D-main/style.css
+++ b/AluraPlus2D-main/style.css
@@ -3,6 +3,7 @@
     --cinza-secundario:#C0C0C0;
     --botao-azul:#167BF7;
     --cor-de-fundo:#00030C;
+    --fonte-principal:'Inter';
 }
 *{
     margin: 0;
@@ -11,16 +12,21 @@
 body{
     background-color:var(--cor-de-fundo);
     color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 .principal{
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
+    text-align: center;
 }
 .container{
     height: 100vh;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 40% 60%;
 }
 .container-botao{
     background-color: var(--botao-azul);
@@ -28,4 +34,72 @@ body{
     padding: 1em;
     color: var(--branco-principal);
     display: block;
+    text-decoration: none;
+    margin-bottom: 1em;
 }
+.botao-secundario{
+    background-color: transparent;
+    border: 2px solid var(--branco-principal);
+}
+.container-aviso{
+    font-size: 12px;
+    color: var(--cinza-secundario);
+}
+.container-titulo{
+    font-size: 28px;
+    font-weight: 700;
+}
+.container-imagem{
+    margin: 1em 0 2em 0;
+}
+.container-caixa{
+    margin: 0 6em;
+}
+.imagem-secundaria{
+    width: 110%;
+}
+.secundario{
+    align-items: center;
+    margin: 0 10em;
+}
+.descricao-titulo{
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
+}
+.descricao-texto{
+    color: var(--cinza-secundario);
+}
+.tres{
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: inline-block;
+    text-decoration: none;
+    margin-bottom: 1em ;
+    margin-top: 1em;
+
+}
+.imagem-tres{
+    width: 80%;
+}
+.container-descricao{
+padding: 2em;
+}
+
+.imagem-quatro{
+    width: 130%;
+    mar
+}
+.descricao-titulo3{
+    font-weight: 700;
+    font-size: 50px;
+    color: var(--branco-principal);
+    margin-bottom: 0.2em;
+}
+.descricao-texto3{
+    color: var(--cinza-secundario);
+}
+
